--- a/workout01/report/workout01-Daiki-Ina.Rmd
+++ b/workout01/report/workout01-Daiki-Ina.Rmd
@@ -75,7 +75,7 @@ knitr::include_graphics("../images/curryst01.jpg")
 | Height        | 6 ft 3 in     |
 
 
-For the narrative part, we intuitively decided to foucuse on Drayond Green.
+For the narrative part, we intuitively decided to foucus on Drayond Green.
 
 
 ##2) Data
@@ -117,7 +117,7 @@ table_overall
 
 > - This table shows overall Field Goal effective shooting percentage by player.
 
-##3) Natattive 
+##3) Narrative 
 
 Draymond Green, the Power Forward of Golden State Warriors, was eclipsed in his shooting performance by his teammate in the season of 2016.
 Don't get me wrong. Green is an extraordinary black player, but his shooting skills seem indeed questionable. 
